converting all race times so they are conform to ISO 8601

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,8 @@
         "https://more-cars.net/api/v1/*"
       ],
       "js": [
-        "content.js"
+        "content.js",
+        "libs/moment.min.js"
       ]
     }
   ],
