--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "description": "A little helper that makes it easier to add motorsport results to the 'More Cars' database. (more-cars.net)",
   "homepage_url": "https://github.com/dgerike/more-cars-motorsport-results-collector",
   "permissions": [
+    "storage",
     "https://www.dtm.com/*",
     "https://more-cars.net/api/v1/*"
   ],
